--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "client",
+  "name": "imageWall",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://pintu1397.github.io/ImageWall/",
+  "homepage": "https://pintu1397.github.io/io/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
